--- a/src/scss/config.scss
+++ b/src/scss/config.scss
@@ -4,6 +4,10 @@
 	box-sizing: border-box;
 	border: none;
 	outline: none;
+	&:after,
+	&:before {
+		box-sizing: border-box;
+	}
 }
 ul {
 	list-style: none;
