--- a/src/scss/dashboard/account.scss
+++ b/src/scss/dashboard/account.scss
@@ -1063,6 +1063,211 @@
             }
         }
     }
+    &__company {
+        background-color: transparent;
+        &-menu {
+            display: flex;
+            justify-content: space-between;
+            align-items: stretch;
+            margin-bottom: 27px;
+            &-item {
+                width: calc(25% - 15px);
+                font-size: 16px;
+                font-weight: 600;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 60px;
+                padding: 5px 10px;
+                border: 1px solid #ddd;
+                color: #000;
+                border-radius: 40px;
+                transition: background-color 0.3s ease;
+                margin: 0 5px;
+                text-align: center;
+                line-height: normal;
+                cursor: pointer;
+                &:hover {
+                    color: #f04a76;
+                    background: #fff;
+                }
+                &.active {
+                    cursor: default;
+                    color: #000;
+                    background: #fff;
+                    border-color: #69ddca;
+                    &:hover {
+                        background: #fff;
+                    }
+                }
+            }
+        }
+        &-content {
+            width: 100%;
+            height: 780px;
+            border: 2px dashed #ddd;
+            &.active {
+                border: 2px solid transparent;
+                .account__company-content-empty {
+                    display: none;
+                }
+            }
+            &-empty {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 100%;
+                &-img {
+                    width: 200px;
+                    height: 200px;
+                }
+                &-text {
+                    color: #d0d0d0;
+                    margin-top: 30px;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 18px;
+                }
+            }
+            &-list {
+
+            }
+            &-item {
+                display: flex;
+                justify-content: flex-start;
+                align-items: stretch;
+                width: 100%;
+                margin-bottom: 30px;
+                padding: 39px 30px 38px;
+                background-color: #fff;
+                border-radius: 15px;
+                &-user {
+                    width: 30%;
+                    padding: 20px 20px;
+                    display: flex;
+                    align-items: center;
+                    &-avatar {
+                        width: 60px;
+                        height: 60px;
+                        position: relative;
+                        &.online {
+                            .account__company-content-item-user-indicator {
+                                background: #57e50c;
+                            }
+                        }
+                    }
+                    &-img {
+                        width: 60px;
+                        height: 60px;
+                        border-radius: 50%;
+                        border: 2px solid #74dfce;
+                        box-shadow: 0 0 25px 0 rgba(116, 223, 206, 0.50);
+                    }
+                    &-info {
+                        margin-left: 16px;
+                        overflow: hidden;
+                        min-width: 100px;
+                    }
+                    &-text {
+                        color: #323232;
+                        line-height: 1.5em;
+                        font-weight: 700;
+                        white-space: normal;
+                        max-height: 50px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        font-size: 16px;
+                    }
+                    &-status {
+                        position: absolute;
+                        display: none;
+                        background-color: #fff;
+                        padding: 10px;
+                        z-index: 4;
+                        width: 100px;
+                        margin-top: 5px;
+                        box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.25);
+                        border-radius: 10px;
+                        color: #000;
+                        text-align: center;
+                        line-height: 15px;
+                        bottom: 100%;
+                        margin-bottom: 10px;
+                        font-size: 13px;
+                        font-weight: 300;
+                    }
+                    &-indicator {
+                        background: #ffc30d;
+                        top: -6px;
+                        right: -6px;
+                        width: 18px;
+                        height: 18px;
+                        position: absolute;
+                        border-radius: 50%;
+                        border: 3px solid #fff;
+                        &:hover + .account__company-content-item-user-status {
+                            display: block;
+                        }
+                    }
+                    &-mobile {
+                        display: none;
+                        margin-top: 7px;
+                        &-text {
+                            font-size: 13px;
+                            line-height: 20px;
+                        }
+                    }
+                }
+                &-service {
+                    width: 30%;
+                    padding: 20px 8px;
+                    display: flex;
+                    align-items: center;
+                    color: #323232;
+                    line-height: 1.5em;
+                    font-weight: 700;
+                    white-space: normal;
+                }
+                &-new {
+                    width: 18%;
+                    min-width: 130px;
+                    padding: 20px 8px;
+                    justify-content: center;
+                    display: flex;
+                    align-items: center;
+                    color: #323232;
+                    line-height: 1.5em;
+                    font-weight: 700;
+                    white-space: normal;
+                }
+                &-date {
+                    width: 22%;
+                    padding: 20px 8px;
+                    justify-content: center;
+                    display: flex;
+                    align-items: center;
+                    font-size: 14px;
+                    font-weight: 400;
+                    color: #363636;
+                    position: relative;
+                    &:after {
+                        display: none;
+                        top: 50%;
+                        right: 20px;
+                        width: 6px;
+                        height: 6px;
+                        content: '';
+                        margin: -3px 0 0;
+                        position: absolute;
+                        border-radius: 6px;
+                        background: #f91942;
+                    }
+                }
+            }
+        }
+    }
 }
 
 
