--- a/src/scss/dashboard/account.scss
+++ b/src/scss/dashboard/account.scss
@@ -1104,12 +1104,14 @@
         }
         &-content {
             width: 100%;
-            height: 780px;
             border: 2px dashed #ddd;
             &.active {
                 border: 2px solid transparent;
                 .account__company-content-empty {
                     display: none;
+                }
+                .account__company-content-list {
+                    display: block;
                 }
             }
             &-empty {
@@ -1118,7 +1120,7 @@
                 justify-content: center;
                 align-items: center;
                 width: 100%;
-                height: 100%;
+                height: 780px;
                 &-img {
                     width: 200px;
                     height: 200px;
@@ -1132,7 +1134,7 @@
                 }
             }
             &-list {
-
+                display: none;
             }
             &-item {
                 display: flex;
@@ -1143,14 +1145,43 @@
                 padding: 39px 30px 38px;
                 background-color: #fff;
                 border-radius: 15px;
+                position: relative;
+                &.active {
+                    .account__company-content-item-service-text,
+                    .account__company-content-item-date-text {
+                        color: #363636;
+                    }
+                    .account__company-content-item-service-text--descr {
+                        color: #b3b0af;
+                    }
+                    .account__company-content-item-status-text {
+                        color: #74dfce;
+                    }
+                    .account__company-content-item-service-text--info,
+                    .account__company-content-item-status-text--info {
+                        color: #666;
+                    }
+                    .account__company-content-item-action {
+                        display: flex;
+                    }
+
+                    &.in-work {
+                        .account__company-content-item-action-button--confirm {
+                            display: block;
+                        }
+                        .account__company-content-item-action-button--take {
+                            display: none;
+                        }
+                    }
+                }
                 &-user {
                     width: 30%;
-                    padding: 20px 20px;
+                    padding: 0 20px 0 0;
                     display: flex;
-                    align-items: center;
+                    align-items: flex-start;
                     &-avatar {
-                        width: 60px;
-                        height: 60px;
+                        width: 68px;
+                        height: 68px;
                         position: relative;
                         &.online {
                             .account__company-content-item-user-indicator {
@@ -1159,8 +1190,8 @@
                         }
                     }
                     &-img {
-                        width: 60px;
-                        height: 60px;
+                        width: 68px;
+                        height: 68px;
                         border-radius: 50%;
                         border: 2px solid #74dfce;
                         box-shadow: 0 0 25px 0 rgba(116, 223, 206, 0.50);
@@ -1171,7 +1202,7 @@
                         min-width: 100px;
                     }
                     &-text {
-                        color: #323232;
+                        color: #b3b0af;
                         line-height: 1.5em;
                         font-weight: 700;
                         white-space: normal;
@@ -1179,6 +1210,10 @@
                         overflow: hidden;
                         text-overflow: ellipsis;
                         font-size: 16px;
+                        display: flex;
+                        align-items: flex-end;
+                        min-height: 36px;
+                        line-height: 1;
                     }
                     &-status {
                         position: absolute;
@@ -1221,49 +1256,173 @@
                     }
                 }
                 &-service {
-                    width: 30%;
-                    padding: 20px 8px;
+                    width: 20%;
+                    padding: 0 20px 0 0;
                     display: flex;
-                    align-items: center;
-                    color: #323232;
-                    line-height: 1.5em;
-                    font-weight: 700;
-                    white-space: normal;
-                }
-                &-new {
-                    width: 18%;
-                    min-width: 130px;
-                    padding: 20px 8px;
-                    justify-content: center;
-                    display: flex;
-                    align-items: center;
-                    color: #323232;
-                    line-height: 1.5em;
-                    font-weight: 700;
-                    white-space: normal;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    &-text {
+                        color: #b3b0af;
+                        line-height: 1;
+                        font-weight: 600;
+                        white-space: normal;
+                        font-size: 18px;
+                        min-height: 36px;
+                        display: flex;
+                        align-items: flex-end;
+                        &--info {
+                            margin-top: 9px;
+                            font-size: 12.4px;
+                            font-weight: 400;
+                            min-height: unset;
+                        }
+                        &--descr {
+                            color: #b3b0af;
+                            margin-top: 6px;
+                            font-size: 12.4px;
+                            font-weight: 400;
+                            min-height: unset;
+                        }
+                    }
                 }
                 &-date {
-                    width: 22%;
-                    padding: 20px 8px;
-                    justify-content: center;
+                    width: 15%;
+                    padding: 0 20px 0 0;
                     display: flex;
-                    align-items: center;
-                    font-size: 14px;
-                    font-weight: 400;
-                    color: #363636;
-                    position: relative;
-                    &:after {
-                        display: none;
-                        top: 50%;
-                        right: 20px;
-                        width: 6px;
-                        height: 6px;
-                        content: '';
-                        margin: -3px 0 0;
-                        position: absolute;
-                        border-radius: 6px;
-                        background: #f91942;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    &-text {
+                        color: #b3b0af;
+                        line-height: 1;
+                        font-weight: 600;
+                        white-space: normal;
+                        font-size: 18px;
+                        min-height: 36px;
+                        display: flex;
+                        align-items: flex-end;
+                        &--info {
+                            margin-top: 9px;
+                            font-size: 12.4px;
+                            font-weight: 400;
+                            min-height: unset;
+                        }
                     }
+                }
+                &-status {
+                    width: 15%;
+                    padding: 0 20px 0 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    &-text {
+                        color: #b3b0af;
+                        line-height: 1;
+                        font-weight: 600;
+                        white-space: normal;
+                        font-size: 18px;
+                        min-height: 36px;
+                        display: flex;
+                        align-items: flex-end;
+                        &--info {
+                            margin-top: 9px;
+                            font-size: 12.4px;
+                            font-weight: 400;
+                            min-height: unset;
+                        }
+                    }
+                }
+                &-action {
+                    width: 20%;
+                    display: none;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    &-button {
+                        width: 183px;
+                        height: 32px;
+                        line-height: 28px;
+                        white-space: nowrap;
+                        padding: 0 10px;
+                        border-radius: 30px;
+                        font-size: 12px;
+                        font-weight: bold;
+                        border: 2px solid #ff0099;
+                        margin-bottom: 12px;
+                        cursor: pointer;
+                        outline: none;
+                        &--message {
+                            color: #000;
+                            background-color: #fff;
+                        }
+                        &--take {
+                            color: #fff;
+                            background-color: #ff0099;
+                        }
+                        &--confirm {
+                            color: #fff;
+                            background-color: #ff0099;
+                            display: none;
+                        }
+                        &:hover,
+                        &:focus {
+                            box-shadow: 10px 10px 25px 0 rgba(0, 0, 0, 0.25%);
+                        }
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
+                    }
+                }
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+}
+
+
+@media (max-width: 1300px) {
+    .account__company {
+        &-menu {
+            flex-wrap: wrap;
+            justify-content: center;
+            &-item {
+                margin-bottom: 16px;
+                min-width: 150px;
+            }
+        }
+        &-content {
+            &-item {
+                flex-direction: column;
+                &-user {
+                    width: 100%;
+                    padding: 0;
+                    margin-bottom: 20px;
+                }
+                &-service {
+                    width: 100%;
+                    padding: 0;
+                }
+                &-status {
+                    position: absolute;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    width: fit-content;
+                    top: 128px;
+                }
+                &-date {
+                    position: absolute;
+                    right: 0;
+                    top: 128px;
+                    padding: 0;
+                    width: fit-content;
+                    align-items: flex-end;
+                    margin-right: 30px;
+                }
+                &-action {
+                    margin-top: 20px;
+                    width: 100%;
+                    align-items: center;
+                    padding: 0;
                 }
             }
         }
@@ -1410,6 +1569,18 @@
     }
 }
 
+@media (max-width: 600px) {
+    .account__company {
+        &-content {
+            &-item {
+                &-status {
+                    position: unset;
+                    transform: unset;
+                }
+            }
+        }
+    }
+}
 
 @media (max-width: 500px) {
     .account {
@@ -1470,6 +1641,19 @@
                     &-new {
                         min-width: 50px;
                     }
+                }
+            }
+        }
+        &__company {
+            padding: 0;
+            &-menu {
+                &-item {
+                    border-radius: 10px;
+                    padding: 5px 10px;
+                    margin: 0 5px;
+                    width: calc(50% - 15px);
+                    font-size: 14px;
+                    margin-bottom: 10px;
                 }
             }
         }
