--- a/src/scss/dashboard/account.scss
+++ b/src/scss/dashboard/account.scss
@@ -1569,6 +1569,322 @@
             }
         }
     }
+    &__favorit {
+        padding: 0 32px;
+        background-color: transparent;
+        margin-top: 0;
+        &-head {
+            display: flex;
+            align-items: center;
+            padding: 25px 34px;
+            margin-bottom: 40px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            &-text {
+                font-size: 16px;
+                line-height: 27px;
+                font-weight: 300;
+                color: #666666;
+            }
+        }
+        &-menu {
+            margin-left: 10px;
+            display: flex;
+            align-items: stretch;
+            flex-wrap: wrap;
+            &-item {
+                padding: 0 19px;
+                font-size: 13px;
+                line-height: 28px;
+                font-weight: 300;
+                border: 1px solid #dadada;
+                border-radius: 14px;
+                color: #000000;
+                transition: all 0.5s;
+                margin-left: 7.5px;
+                margin-right: 7.5px;
+                cursor: pointer;
+                &:hover {
+                    border-color: #69ddca;
+                }
+                &.active {
+                    color: #000;
+                    background: #69ddca;
+                    border-color: #69ddca;
+                    &:hover {
+                        background: #fff;
+                    }
+                }
+            }
+        }
+        &-content {
+            width: 100%;
+            border: 2px dashed #ddd;
+            &.active {
+                border: 2px solid transparent;
+                .account__favorit-content-empty {
+                    display: none;
+                }
+                .account__favorit-content-list {
+                    display: block;
+                }
+            }
+            &-empty {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 780px;
+                &-img {
+                    width: 200px;
+                    height: 200px;
+                }
+                &-text {
+                    color: #999;
+                    font-size: 18px;
+                    line-height: 20px;
+                }
+            }
+            &-list {
+                display: none;
+            }
+            &-item {
+                display: flex;
+                justify-content: flex-start;
+                align-items: stretch;
+                width: 100%;
+                margin-bottom: 30px;
+                padding: 50px 30px 25px 35px;
+                background-color: #fff;
+                border-radius: 15px;
+                position: relative;
+                &:hover {
+                    box-shadow: 0 0 30px rgba(255, 229, 0, 0.25);
+                }
+                &-user {
+                    padding: 0 20px 0 0;
+                    display: flex;
+                    align-items: flex-start;
+                    &-avatar {
+                        width: 141px;
+                        height: 141px;
+                        position: relative;
+                        &.online {
+                            .account__favorit-content-item-user-indicator {
+                                &::before {
+                                    border: 1px solid #74dfce;
+                                }
+                                &::after {
+                                    background-color: #74dfce;
+                                }
+                            }
+                        }
+                    }
+                    &-img {
+                        width: 141px;
+                        height: 141px;
+                        border-radius: 50%;
+                        border: 2px solid #74dfce;
+                        box-shadow: 0 0 25px 0 rgba(116, 223, 206, 0.50);
+                    }
+                    &-link {
+                        color: #000;
+                        line-height: 21px;
+                        font-weight: 700;
+                        font-size: 16px;
+                        line-height: 1;
+                        transition: all 300ms ease-in-out;
+                        &:hover {
+                            color: #f04a76;
+                        }
+                    }
+                    &-status {
+                        position: absolute;
+                        display: none;
+                        background-color: #fff;
+                        padding: 10px;
+                        z-index: 4;
+                        width: 100px;
+                        margin-left: 60px;
+                        box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.25);
+                        border-radius: 10px;
+                        color: #000;
+                        text-align: center;
+                        line-height: 15px;
+                        bottom: 100%;
+                        margin-bottom: 3px;
+                        font-size: 13px;
+                        font-weight: 300;
+                    }
+                    &-indicator {
+                        top: 3px;
+                        right: 9px;
+                        width: 0px;
+                        height: 0px;
+                        position: absolute;
+                        &::before {
+                            border: 1px solid #ffe500;
+                            -webkit-transition: .5s;
+                            transition: .5s;
+                            bottom: -25px;
+                            right: 7px;
+                            width: 26px;
+                            height: 26px;
+                            border-radius: 50%;
+                            background-color: transparent;
+                            content: "";
+                            position: absolute;
+                            z-index: 1;
+                        }
+                        &::after {
+                            background-color: #ffe500;
+                            -webkit-transition: .5s;
+                            transition: .5s;
+                            bottom: -20px;
+                            right: 12px;
+                            width: 16px;
+                            height: 16px;
+                            border-radius: 50%;
+                            content: "";
+                            position: absolute;
+                            z-index: 1;
+                        }
+                        &:hover + .account__favorit-content-item-user-status {
+                            display: block;
+                        }
+                    }
+                    &-mobile {
+                        display: none;
+                        margin-top: 7px;
+                        &-text {
+                            font-size: 13px;
+                            line-height: 20px;
+                        }
+                    }
+                }
+                &-service {
+                    width: 20%;
+                    padding: 0 20px 0 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    &-text {
+                        color: #b3b0af;
+                        line-height: 1;
+                        font-weight: 600;
+                        white-space: normal;
+                        font-size: 18px;
+                        min-height: 36px;
+                        display: flex;
+                        align-items: flex-end;
+                        &--info {
+                            margin-top: 9px;
+                            font-size: 12.4px;
+                            font-weight: 400;
+                            min-height: unset;
+                        }
+                        &--descr {
+                            color: #b3b0af;
+                            margin-top: 6px;
+                            font-size: 12.4px;
+                            font-weight: 400;
+                            min-height: unset;
+                        }
+                    }
+                }
+                &-date {
+                    width: 15%;
+                    padding: 0 20px 0 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    &-text {
+                        color: #b3b0af;
+                        line-height: 1;
+                        font-weight: 600;
+                        white-space: normal;
+                        font-size: 18px;
+                        min-height: 36px;
+                        display: flex;
+                        align-items: flex-end;
+                        &--info {
+                            margin-top: 9px;
+                            font-size: 12.4px;
+                            font-weight: 400;
+                            min-height: unset;
+                        }
+                    }
+                }
+                &-status {
+                    width: 15%;
+                    padding: 0 20px 0 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    &-text {
+                        color: #b3b0af;
+                        line-height: 1;
+                        font-weight: 600;
+                        white-space: normal;
+                        font-size: 18px;
+                        min-height: 36px;
+                        display: flex;
+                        align-items: flex-end;
+                        &--info {
+                            margin-top: 9px;
+                            font-size: 12.4px;
+                            font-weight: 400;
+                            min-height: unset;
+                        }
+                    }
+                }
+                &-action {
+                    width: 20%;
+                    display: none;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    &-button {
+                        width: 183px;
+                        height: 32px;
+                        line-height: 28px;
+                        white-space: nowrap;
+                        padding: 0 10px;
+                        border-radius: 30px;
+                        font-size: 12px;
+                        font-weight: bold;
+                        border: 2px solid #ff0099;
+                        margin-bottom: 12px;
+                        cursor: pointer;
+                        outline: none;
+                        &--message {
+                            color: #000;
+                            background-color: #fff;
+                        }
+                        &--take {
+                            color: #fff;
+                            background-color: #ff0099;
+                        }
+                        &--confirm {
+                            color: #fff;
+                            background-color: #ff0099;
+                            display: none;
+                        }
+                        &:hover,
+                        &:focus {
+                            box-shadow: 10px 10px 25px 0 rgba(0, 0, 0, 0.25%);
+                        }
+                        &:last-child {
+                            margin-bottom: 0;
+                        }
+                    }
+                }
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
 }
 
 
