--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,10 +1,10 @@
-// @font-face {
-//     font-family: 'SF Pro Display';
-//     font-display: swap;
-//     src: url('../fonts/SFProDisplay-Thin.ttf') format('truetype');
-//     font-weight: 100;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'SF Pro Display';
+    font-display: swap;
+    src: url('../fonts/SFProDisplay-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
 // @font-face {
 //     font-family: 'SF Pro Display';
 //     font-display: swap;
