--- a/src/scss/config.scss
+++ b/src/scss/config.scss
@@ -18,6 +18,9 @@ a {
 .hide {
 	display: none !important;
 }
+.show {
+	opacity: 1 !important;
+}
 body {
 	font-family: 'SF Pro Display', 'Arial', 'sans-serif';
 	color: #000;
