--- a/src/scss/UI/modal.scss
+++ b/src/scss/UI/modal.scss
@@ -35,28 +35,6 @@
             box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.3);
             background-color: #fff;
         }
-        &-2 {
-            .modal__body {
-                width: 630px;
-                box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.3);
-                background-color: #fff;
-            }
-        }
-        &-3 {
-            .modal__body {
-                width: 630px;
-                box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.3);
-                background-color: #fff;
-                .modal__body-blog {
-                }
-                .modal__body-blog-content-form-3 {
-
-                    .modal__body-blog-content-form-button {
-                        margin-top: 50px;
-                    }
-                }
-            }
-        }
     }
 
     &--rek {
@@ -228,90 +206,7 @@
                 }
             }
             &-card {
-                width: 320px;
-                padding: 25px 16px;
-                border: 1px solid #c8ebf7;
-                border-radius: 14px;
-                margin-top: 8px;
-                &-input {
-                    padding-right: 25px;
-                    letter-spacing: .5px;
-                    padding-left: 7px;
-                    padding: 5px 25px 5px 7px;
-                    border-bottom: 1px solid #f0f0f3;
-                    outline: none;
-                    max-height: 30px;
-                    min-width: 180px;
-                    color: #000;
-                    &::placeholder {
-                        color: #000;
-                    }
-                }
-                &-svg {
-                    width: 46px;
-                    height: 38px;
-                }
-                &-row {
-                    margin-top: 40px;
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                }
-                &-text {
-                    font-family: 'SF Pro Display', 'Arial', 'sans-serif';
-                    font-size: 12px;
-                    font-weight: 400;
-                    line-height: 26px;
-                    &--error {
-                        color: #e61919;
-                        font-size: 12px;
-                        display: none;
-                    }
-                }
-                &-label {
-                    position: relative;
-                    &--error {
-                        .modal__body-blog-content-card-input {
-                            border-bottom: 1px solid #e61919;
-                        }
-                        .modal__body-blog-content-card-text--error {
-                            display: block;
-                        }
-                        .modal__body-blog-content-card-cross {
-                            display: block;
-                        }
-                    }
-                }
-                &-cross {
-                    top: -2px;
-                    right: 0;
-                    width: 32px;
-                    height: 32px;
-                    position: absolute;
-                    cursor: pointer;
-                    display: none;
-                }
-                &-description {
-                    display: flex;
-                    justify-content: flex-end;
-                    align-items: center;
-                    margin-top: 50px;
-                    &-text {
-                        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
-                        font-size: 10px;
-                        margin-right: 7px;
-                        line-height: 16px;
-                        color: #000;
-                        font-weight: 400;
-                    }
-                    &-img {
-                        height: 23px;
-                        width: 23px;
-                        background: url('../img/logo_uapay-2.png');
-                        background-repeat: no-repeat;
-                        background-size: contain;
-                    } 
-                }
+                margin: 20px 0;
             }
             &-form {
                 margin-top: 40px;
@@ -319,20 +214,6 @@
                 flex-direction: column;
                 align-items: center;
                 display: flex;
-                &-2 {
-                    margin-top: 40px;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    display: flex;
-                }
-                &-3 {
-                    margin-top: 40px;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    display: flex;
-                }
                 &-row {
                     display: flex;
                     flex-wrap: wrap;
@@ -344,6 +225,54 @@
                     margin-bottom: 30px;
                     &--full {
                         width: 100%;
+                    }
+                }
+                &-list {
+                    width: 100%;
+                    margin: 20px 0;
+                    &-item {
+                        margin-bottom: 20px;
+                        &:last-child {
+                            margin-bottom: 0px;
+                        }
+                    }
+                    &-label {
+                        display: flex;
+                        align-items: center;
+                    }
+                    &-input {
+                        width: 50% !important;
+                    }
+                    &-text {
+                        display: block;
+                        width: 50%;
+                        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                        font-weight: 300;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #323232;
+                        &--info {
+                            width: 100%;
+                            color: #000;
+                            font-weight: 400;
+                            margin-bottom: 20px;
+                        }
+                        &.required {
+                            font-weight: 500;
+                            &::after {
+                                content: "*";
+                                color: #FF0000;
+                                margin-left: 4px;
+                            }
+                        }
+                    }
+                    &-descr {
+                        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                        font-weight: 300;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #323232;
+                        margin-left: 8px;
                     }
                 }
                 &-text {
@@ -418,6 +347,12 @@
                     &:focus {
                         background: #C70077;
                         color: #fff;
+                    }
+                    &[disabled] {
+                        cursor: wait;
+                        color: #363636;
+                        box-shadow: 0 4px 23px rgba(119, 105, 114, 0.41);
+                        background-color: #dbdbdb;
                     }
                 }
                 &-textarea {
@@ -640,6 +575,12 @@
                     &:focus {
                         background: #C70077;
                         color: #fff;
+                    }
+                    &[disabled] {
+                        cursor: wait;
+                        color: #363636;
+                        box-shadow: 0 4px 23px rgba(119, 105, 114, 0.41);
+                        background-color: #dbdbdb;
                     }
                 }
                 &-textarea {
