--- a/src/scss/UI/select.scss
+++ b/src/scss/UI/select.scss
@@ -81,6 +81,10 @@
         cursor: pointer;
         list-style-type: none;
         line-height: 34px;
+        text-transform: capitalize;
+        &--line {
+            text-decoration: underline;
+        }
         &.active {
             background: #fcfcfc;
             color: #373542;
