--- a/src/scss/UI/catalog__blogger.scss
+++ b/src/scss/UI/catalog__blogger.scss
@@ -1,8 +1,8 @@
-.catalog__blogger {
-    &-left {
+.catalog-blogger {
+    &__left {
         margin: 0 20px 0 0;
     }
-    &-center {
+    &__center {
         flex-grow: 1;
         margin-left: 25px;
         margin-right: 25px;
@@ -16,24 +16,25 @@
 
         }
     }
-    &-right {
+    &__right {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
     }
-    &-list {
+    &__list {
     }
-    &-item {
+    &__item {
         display: flex;
         justify-content: flex-start;
         align-items: stretch;
         width: 100%;
         margin-bottom: 30px;
-        padding: 50px 30px 25px 35px;
+        padding: 40px 30px 25px 35px;
         background-color: #fff;
         border-radius: 15px;
         position: relative;
+        min-height: 241px;
         &:hover {
             box-shadow: 0 0 30px rgba(255, 229, 0, 0.25);
         }
@@ -168,7 +169,7 @@
                 justify-content: center;
                 width: 100%;
                 &:hover {
-                    .catalog__blogger-item-user-svg {
+                    .catalog-blogger-item-user-svg {
                         fill: rgba(255, 0, 153, 0.6);
                     }
                 }
@@ -271,6 +272,7 @@
             border-radius: 13.5px;
             display: block;
             border: 1px solid transparent;
+            margin-top: 15px;
             &:hover,
             &:focus {
                 background-color: #fff;
@@ -282,13 +284,57 @@
             margin-bottom: 0;
         }
     }
+    &__sort {
+        display: flex;
+        align-items: center;
+        padding: 25px 34px;
+        margin-bottom: 40px;
+        background-color: #ffffff;
+        border-radius: 10px;
+        &-text {
+            font-size: 16px;
+            line-height: 27px;
+            font-weight: 300;
+            color: #666666;
+        }
+        &-menu {
+            margin-left: 10px;
+            display: flex;
+            align-items: stretch;
+            flex-wrap: wrap;
+            &-item {
+                padding: 0 19px;
+                font-size: 13px;
+                line-height: 28px;
+                font-weight: 300;
+                border: 1px solid #dadada;
+                border-radius: 14px;
+                color: #000000;
+                transition: all 0.5s;
+                margin-left: 7.5px;
+                margin-right: 7.5px;
+                cursor: pointer;
+                &:hover {
+                    border-color: #69ddca;
+                }
+                &.active {
+                    color: #000;
+                    background: #69ddca;
+                    border-color: #69ddca;
+                    &:hover {
+                        background: #fff;
+                    }
+                }
+            }
+        }
+    }
 
 }
 
 
 @media (max-width: 1250px)  {
-    .catalog__blogger {
-        &-item {
+    .catalog-blogger {
+        &__item {
             &-user {
                 &-stats {
                     flex-wrap: wrap;
@@ -313,10 +359,27 @@
     }
 }
 
+@media (max-width: 1200px) {
+    .catalog-blogger {
+        &__sort {
+            &-text {
+                display: none;
+            }
+            &-menu {
+                margin-left: 0;
+                &-item {
+                    margin-left: 5px;
+                    margin-right: 5px;
+                }
+            }
+        }
+    }
+}
+
 
 @media (max-width: 1050px)  {
-    .catalog__blogger {
-        &-item {
+    .catalog-blogger {
+        &__item {
             &-user {
                 &-tags {
                     margin-top: 10px;
@@ -329,12 +392,20 @@
                 }
             }
         }
+        &__sort {
+            margin-top: 30px;
+            margin-bottom: 30px;
+            &-menu {
+                width: 100%;
+                justify-content: center;
+            }
+        }
     }
 }
 
 @media (max-width: 900px)  {
-    .catalog__blogger {
-        &-item {
+    .catalog-blogger {
+        &__item {
             &-user {
                 &-tags {
                     flex-direction: column;
@@ -351,8 +422,8 @@
 
 
 @media (max-width: 768px)  {
-    .catalog__blogger {
-        &-item {
+    .catalog-blogger {
+        &__item {
             flex-direction: column;
             align-items: center;
             padding: 15px 15px;
@@ -415,17 +486,46 @@
                 margin-top: 60px;
             }
         }
+        &__sort {
+            &-menu {
+                &-item {
+                    margin-left: 4px;
+                    margin-right: 4px;
+                    font-size: 12px;
+                }
+            }
+        }
     }
 }
 
+@media (max-width: 600px) {
+    .catalog-blogger {
+        &__sort {
+            &-menu {
+                flex-direction: column;
+                align-items: center;
+                &-item {
+                    min-width: 230px;
+                    margin: 0 0 5px 0;
+                    font-size: 14px;
+                    padding: 5px 20px;
+                    border-radius: 20px;
+                    &:last-child {
+                        margin: 0;
+                    }
+                }
+            }
+        }
+    }
+}
 
 @media (max-width: 500px) {
-    .catalog__blogger {
-        &-center {
+    .catalog-blogger {
+        &__center {
             width: 100%;
             margin: 0;
         }
-        &-item {
+        &__item {
             &-user {
                 &-item {
                     margin: 10px 0;
