--- a/src/scss/search-bloggers/search-bloggers.scss
+++ b/src/scss/search-bloggers/search-bloggers.scss
@@ -7,6 +7,7 @@
         display: flex;
         width: 1400px;
         padding: 40px 20px;
+        align-items: flex-start;
     }
     &__aside {
         width: 350px;
@@ -17,5 +18,71 @@
     }
     &__filters {
 
+    }
+    &__content {
+        width: 100%;
+        max-width: 1013px;
+        margin-left: 29px;
+        padding: 0 32px;
+    }
+    &__block {
+        width: 100%;
+        border: 2px dashed #ddd;
+        &.active {
+            border: 2px solid transparent;
+            .search-bloggers__block-empty {
+                display: none;
+            }
+            .search-bloggers__block-list {
+                display: block;
+            }
+        }
+        &-list {
+            display: none;
+        }
+        &-empty {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 780px;
+            &-img {
+                width: 200px;
+                height: 200px;
+            }
+            &-text {
+                color: #999;
+                font-size: 18px;
+                line-height: 20px;
+            }
+        }
+    }
+
+}
+
+
+@media (max-width: 1050px) {
+    .search-bloggers {
+        &__wrap {
+            display: flex;
+            flex-direction: column;
+        }
+        &__aside {
+            width: 100%;
+        }
+        &__content {
+            max-width: unset;
+            padding: 0;
+            margin-left: 0;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .search-bloggers {
+        .catalog-blogger__item-rating-chart {
+            top: 130px;
+        }
     }
 }
