--- a/src/scss/blogeram/blog-1.scss
+++ b/src/scss/blogeram/blog-1.scss
@@ -6,7 +6,7 @@
     background-color: #ffe600;
     position: relative;
     overflow: hidden;
-    z-index: 1;
+    z-index: 0;
     &__wrap {
         width: 1024px;
         display: flex;
@@ -22,7 +22,7 @@
             border-bottom: 120px solid #ffffff;
             border-left: 100vw solid transparent;
             background: transparent;
-            z-index: 2;
+            z-index: 0;
         }
     }
     &__left {
@@ -87,6 +87,7 @@
         background-color: #FF0099;
         border: 1px solid #FF0099;
         color: #fff;
+        cursor: pointer;
         &:hover {
             color: #FF0099;
             background-color: #FFFFFF;
