--- a/src/scss/kak-effektivno-rabotat-s-blogerami/eff-2.scss
+++ b/src/scss/kak-effektivno-rabotat-s-blogerami/eff-2.scss
@@ -6,7 +6,7 @@
     background-color: #69DDCA;
     position: relative;
     overflow: hidden;
-    z-index: 1;
+    z-index: 0;
     &::after {
         content: '';
         position: absolute;
@@ -17,7 +17,7 @@
         border-bottom: 120px solid #ffffff;
         border-left: 100vw solid transparent;
         background: transparent;
-        z-index: 2;
+        z-index: 0;
     }
     &__wrap {
         width: 1024px;
@@ -86,6 +86,7 @@
         background-color: #FF0099;
         border: 1px solid #FF0099;
         color: #fff;
+        cursor: pointer;
         &:hover {
             color: #FF0099;
             background-color: #FFFFFF;
