--- a/src/scss/search-bloggers/search-bloggers.scss
+++ b/src/scss/search-bloggers/search-bloggers.scss
@@ -22,8 +22,8 @@
     &__content {
         width: 100%;
         max-width: 1013px;
-        margin-left: 29px;
-        padding: 0 32px;
+        margin-left: 40px;
+        padding: 0;
     }
     &__block {
         width: 100%;
