developen page blogger 31.03.2021

--- a/src/scss/search-bloggers/search-bloggers.scss
+++ b/src/scss/search-bloggers/search-bloggers.scss
@@ -16,9 +16,9 @@
         border-radius: 10px;
         background-color: #fff;
     }
-    &__filters {
+    // &__filters {
 
-    }
+    // }
     &__content {
         width: 100%;
         max-width: 1013px;
