--- a/src/scss/UI/modal.scss
+++ b/src/scss/UI/modal.scss
@@ -416,9 +416,9 @@
                         span {
                             vertical-align: middle;
                         }
-                        // a {
+                        a {
 
-                        // }
+                        }
                     }
                 }
             }
@@ -435,6 +435,49 @@
             &-item {
                 margin-bottom: 30px;
                 width: 33%;
+            }
+        }
+        &-question {
+            color: #323232;
+            letter-spacing: .3px;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 22px;
+            text-align: center;
+        }
+        &-description {
+            margin-top: 10px;
+            color: #414141;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 400;
+            text-align: center;
+        }
+        &-row {
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
+        }
+        &-button {
+            border: 1px solid #ff0099;
+            background: transparent;
+            color: #000;
+            border-radius: 23px;
+
+            text-align: center;
+            cursor: pointer;
+            font-size: 13px;
+            font-weight: 700;
+            line-height: 36px;
+            padding: 0 50px;
+            margin-right: 20px;
+            &:last-child {
+                margin-right: 0;
+            }
+            &:hover {
+                box-shadow: 10px 10px 25px 0 rgba(0, 0, 0, .25)
             }
         }
     }
@@ -642,9 +685,9 @@
                         span {
                             vertical-align: middle;
                         }
-                        // a {
+                        a {
 
-                        // }
+                        }
                     }
                 }
             }
