--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -72,6 +72,8 @@
             line-height: 16px;
             font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-weight: 400;
+            background: unset;
+            cursor: pointer;
         }
     }
     &__social {
