--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -293,6 +293,9 @@
 			font-size: 14px;
 			font-style: normal;
 			font-weight: normal;
+			text-align: left;
+			background: unset;
+			cursor: pointer;
 		}
 	}
 	&__login-area {
