--- a/src/scss/blogger/blogger.scss
+++ b/src/scss/blogger/blogger.scss
@@ -7,9 +7,7 @@
     &__wrap {
         width: 1120px;
         display: flex;
-        // flex-wrap: wrap;
         justify-content: space-between;
-        // align-items: center;
         padding: 30px 30px 40px 30px;
         border-radius: 10px;
         background-color: #ffffff;
@@ -85,16 +83,8 @@
     }
     &__stats {
         display: flex;
-        // flex-wrap: wrap;
         justify-content: space-between;
-        // align-items: stretch;
-        // align-content: stretch;
         width: 100%;
-        // padding: 0;
-        // margin: 0;
-        // font-family: "SF Pro Display", "Arial", sans-serif;
-        // margin-bottom: 30px;
-        // list-style: none;
         &-item {
             flex: 1 1 auto;
         }
@@ -165,6 +155,129 @@
         &:hover,
         &:focus {
             box-shadow: 10px 10px 25px 0 rgba(0, 0, 0, 0.25)
+        }
+    }
+    &__chart {
+        width: 100px;//
+        height: 100px;//
+        outline: 1px solid #ff0000;//
+        &-text {
+            color: #ff0000;//
+            display: flex;//
+            justify-content: center;//
+            align-items: center;//
+            font-size: 20px;//
+            height: 100%;//
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .blogger {
+        &__wrap {
+            flex-wrap: wrap;
+        }
+        &__left {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+        &__right {
+            margin-left: 0;
+            width: 100%;
+            &-info {
+                width: 100%;
+            }
+            &-bottom {
+                justify-content: center;
+            }
+        }
+        &__tags {
+            &.chart {
+                padding-left: 100px;
+            }
+            justify-content: center;
+            &-text {
+                display: none;
+            }
+        }
+        &__stats {
+            flex-wrap: wrap;
+            display: none;
+            &--post {
+                justify-content: center;
+                .blogger__stats-item {
+                    width: 50%;
+                    max-width: 50%;
+                    &:nth-child(3) {
+                        order: 1;
+                    }
+                    &:nth-child(4) {
+                        order: 2;
+                    }
+                    &:nth-child(1) {
+                        order: 3;
+                    }
+                    &:nth-child(2) {
+                        order: 4;
+                    }
+                    &:nth-child(5) {
+                        order: 5;
+                    }
+                }
+            }
+            &-item {
+                width: 33%;
+                margin-bottom: 20px;
+            }
+        }
+
+        &__chart {
+            min-width: 75px;
+            width: 75px;
+            height: 75px;
+        }
+        &__button {
+            &--favorit {
+                margin-right: auto;
+            }
+        }
+    }
+}
+
+@media (max-width: 560px) {
+    .blogger {
+        &__right {
+            position: relative;
+            &-bottom {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+        &__button {
+            margin-top: 10px;
+            &--favorit {
+                padding: 2px 23px;
+                margin-right: unset;
+            }
+        }
+        &__chart {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+        &__tags {
+            margin-top: 0;
+            &.chart {
+                padding-left: 0;
+                margin-top: 30px;
+            }
+        }
+        &__stats {
+            .svg-question {
+                min-width: 14px;
+            }
         }
     }
 }
