--- a/src/scss/blogger/reviews.scss
+++ b/src/scss/blogger/reviews.scss
@@ -174,4 +174,36 @@
         margin-left: auto;
     }
 }
-       
+
+@media (max-width: 900px) {
+    .reviews {
+        &__content {
+            flex-direction: column;
+        }
+        &__rating {
+            &-list {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 560px) {
+    .reviews {
+        &__item {
+            flex-direction: column;
+            &-status {
+                margin-top: 5px;
+            }
+            &-right {
+                width: 100%;
+            }
+            &-left {
+                width: 100%;
+            }
+        }
+        &__stars {
+            margin-top: 5px;
+        }
+    }
+}
