--- a/src/scss/config.scss
+++ b/src/scss/config.scss
@@ -29,6 +29,9 @@ body {
 	font-style: normal;
 	line-height: 26px;
 }
+.main-bg {
+	background-color: #f7f7f7;
+}
 
 @media (max-width: 1050px) {
 	.mobi-hide {
